--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<h1>Установка автосигнализаций Pandora и StarLine</h1>
 							<div class="b-header-content-text">Прокачаем безопасность и комфорт вашего авто и выведем его на новый уровень!</div>
 							<div class="b-btn-cont">
-								<a href="#b-main-popup" class="b-btn fancy fancy-binded">
+								<a href="#b-main-popup" class="b-btn fancy">
 									<span><b>Подробнее об услуге</b></span>
 								</a>
 							</div>
@@ -63,7 +63,7 @@
 							<h1>Установка предпусковых подогревателей</h1>
 							<div class="b-header-content-text">Принципиальный момент: если вам сделали предварительный расчет работы в нашей компании</div>
 							<div class="b-btn-cont">
-								<a href="#b-main-popup" class="b-btn fancy fancy-binded">
+								<a href="#b-main-popup" class="b-btn fancy">
 									<span><b>Подробнее об услуге</b></span>
 								</a>
 							</div>
@@ -72,7 +72,7 @@
 							<h1> Чип-тюнинг двигателя и КПП</h1>
 							<div class="b-header-content-text">А оплату за проделанную работу вы совершаете только после проверки качества оказанных услуг</div>
 							<div class="b-btn-cont">
-								<a href="#b-main-popup" class="b-btn fancy fancy-binded">
+								<a href="#b-main-popup" class="b-btn fancy">
 									<span><b>Подробнее об услуге</b></span>
 								</a>
 							</div>
@@ -235,7 +235,7 @@
 						<a href="#" class="read-more">Читать полностью<span class="icon-arrow-right"></span></a>
 					</div>
 					<div class="b-reviews-item-bottom clearfix">
-						<div class="service"><img src="i/reviews-flamp.png"></div>
+						<div class="service"><img src="i/reviews-flamp.png" class="logo-flamp"></div>
 						<div class="name">Александр</div>
 					</div>
 				</div>
@@ -246,7 +246,7 @@
 						<a href="#" class="read-more">Читать полностью<span class="icon-arrow-right"></span></a>
 					</div>
 					<div class="b-reviews-item-bottom clearfix">
-						<div class="service"><img src="i/reviews-flamp.png"></div>
+						<div class="service"><img src="i/reviews-yandex.png" class="logo-yandex"></div>
 						<div class="name">Александр</div>
 					</div>
 				</div>
@@ -257,7 +257,7 @@
 						<a href="#" class="read-more">Читать полностью<span class="icon-arrow-right"></span></a>
 					</div>
 					<div class="b-reviews-item-bottom clearfix">
-						<div class="service"><img src="i/reviews-flamp.png"></div>
+						<div class="service"><img src="i/reviews-2gis.png" class="logo-2gis"></div>
 						<div class="name">Александр</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 						<a href="#" class="read-more">Читать полностью<span class="icon-arrow-right"></span></a>
 					</div>
 					<div class="b-reviews-item-bottom clearfix">
-						<div class="service"><img src="i/reviews-flamp.png"></div>
+						<div class="service"><img src="i/reviews-flamp.png" class="logo-flamp"></div>
 						<div class="name">Александр</div>
 					</div>
 				</div>
@@ -282,6 +282,82 @@
 						
 					</div>
 				</div>
+			</div>
+		</div>
+	</div>
+	<div class="b-4">
+		<div class="b-block">
+			<h2>Мы являемся <b>официальными</b> представителями:</h2>
+			<div class="b-members-list">
+				<div class="b-members-item">
+					<img src="i/member-1.png">
+				</div>
+				<div class="b-members-item">
+					<img src="i/member-2.png">
+				</div>
+				<div class="b-members-item">
+					<img src="i/member-3.png">
+				</div>
+				<div class="b-members-item">
+					<img src="i/member-4.png">
+				</div>
+				<div class="b-members-item">
+					<img src="i/member-5.png">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="b b-9">
+		<div class="b-map-bubble show">
+			<div class="b-map-bubble-inner">
+				<div class="b-map-bubble-text">Свяжитесь с нами<br>или приезжайте по адресу:<br> <b>г.&nbsp;Томск, ул.&nbsp;Смирнова, д.&nbsp;7/4</b></div>
+				<div class="b-map-bubble-bottom">
+					<a href="tel:+73822337133" class="b-map-phone-1">+7 (3822) 33-71-33</a>
+					<a href="tel:+73822984298" class="b-map-phone-2">98-42-98</a>
+				</div>
+			</div>
+		</div>
+		<div id="map_canvas"></div>
+	</div>
+	<div class="b-footer">
+		<div class="b-block">
+			<div class="b-footer-top">
+				<div class="b-footer-col b-footer-col-1">
+					<a href="/" class="b-logo clearfix"></a>
+					<ul class="b-soc-list">
+						<li><a href="#" target="_blank" class="icon-vk">Вконтакте</a></li>
+						<li><a href="#" target="_blank" class="icon-insta">Instagram</a></li>
+					</ul>
+					<ul class="b-footer-menu">
+						<li><a href="#">О компании</a></li>
+						<li><a href="#">Услуги</a></li>
+						<li><a href="#">Статьи</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</div>
+				<div class="b-footer-col b-footer-col-2">
+					<h3>Услуги</h3>
+					<ul class="b-footer-menu">
+						<li><a href="#">Установка автосигнализаций</a></li>
+						<li><a href="#">Чип-тюнинг двигателя и КПП</a></li>
+						<li><a href="#">Установка предпусковых подогревателей</a></li>
+						<li><a href="#">Заправка кондиционеров</a></li>
+						<li><a href="#">Прошивка ключей</a></li>
+						<li><a href="#">Тонировка</a></li>
+					</ul>
+				</div>
+				<div class="b-footer-col b-footer-col-3 right">
+					<a href="tel:+73822337133" class="b-phone-link">+7 (3822) 33-71-33</a><br>
+					<div class="address">г. Томск, ул. Смирнова, д. 7/4</div>
+					<a href="mailto:autosec@yandex.ru" class="email dashed yellow">autosec@yandex.ru</a>
+				</div>
+			</div>
+			<div class="b-politics clearfix">
+				<div class="b-politics-left">
+					<div class="b-politics-copyright">© 2020 ООО «Автобезопасность». <br>Все права защищены.</div>
+					<div class="b-politics-link"><a href="#">Политика конфиденциальности</a></div>
+				</div>
+				<a href="https://redder.pro/" target="_blank" class="b-redder-logo"></a>
 			</div>
 		</div>
 	</div>
@@ -319,7 +395,7 @@
 	</div>
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
-	<!-- <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=false&key=AIzaSyD6Sy5r7sWQAelSn-4mu2JtVptFkEQ03YI"></script> -->
+	<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyD6Sy5r7sWQAelSn-4mu2JtVptFkEQ03YI"></script>
 	<script type="text/javascript" src="js/jquery.touch.min.js"></script>
 	<script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript" src="js/jquery.validate.min.js"></script>
